# micrograd

./: LICENSE  README.md  micrograd-demo.ipynb  pyproject.toml
micrograd/: engine.py  neuron.py  tracer.py
tests/: test_engine.py  test_neuron.py  test_tracer.py
